<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DateFragment">

<TextView
        android:id= "@+id/chooseDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize = "30sp"
        android:textColor="@color/pink_color"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/choose_a_pickup_date"/>

    <RadioGroup
        android:id="@+id/dateButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseDateText">

        <RadioButton
            android:id="@+id/march7Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/march_7" />

        <RadioButton
            android:id="@+id/march8Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/march_8" />

        <RadioButton
            android:id="@+id/march9Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/march_9" />

        <RadioButton
            android:id="@+id/march10Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/march_10" />

        <RadioButton
            android:id="@+id/march11Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/march_11" />
    </RadioGroup>

    <TextView
        android:id= "@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize = "20sp"
        app:layout_constraintTop_toBottomOf="@id/dateButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text = "@string/subtotal_10"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/light_pink_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceText" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/brown_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cancelButton" />

</androidx.constraintlayout.widget.ConstraintLayout>