<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/cupcakeImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="150dp"
        app:srcCompat="@drawable/ic_cupcake"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/orderCupcakesText"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="174dp" />

    <TextView
        android:id="@+id/orderCupcakesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:text="@string/order_cupcakes"
        android:textColor="@color/pink_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/oneCupcakeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cupcakeImage" />

    <Button
        android:id="@+id/oneCupcakeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown_color"
        android:text="@string/_1_cupcake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderCupcakesText" />

    <Button
        android:id="@+id/sixCupcakeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_pink_color"
        android:text="@string/_6_cupcakes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oneCupcakeButton" />

    <Button
        android:id="@+id/twelveCupcakeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown_color"
        android:text="@string/_12_cupcakes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sixCupcakeButton" />
</androidx.constraintlayout.widget.ConstraintLayout>